fixed scrollbar issue

--- a/components/Parchment/Parchment.module.css
+++ b/components/Parchment/Parchment.module.css
@@ -2,8 +2,8 @@
     position: fixed;
     top: 0%;
     bottom: 0%;
-    right: 0%;
-    left: 0%;
+    width: 100vw;
+    margin: auto ;
     background-image: url(/wood.avif);
     background-size: cover;
 
@@ -13,7 +13,7 @@
     position: relative;
     width: calc(100% - 20px);
     max-width: 960px;
-    min-height: calc(100vh - 2rem);
+    min-height: calc(100vh - 2.5rem);
     margin: 1rem auto;
     padding: 4rem;
 }
